force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/CommercientSF__ApSupplierAddr__c.object-meta.xml
<CustomObject>
    <label>Syspro AP Supplier Address</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro AP Supplier Addresss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>