force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Syspro AP Supplier Addresss</relationshipLabel>
    <relationshipName>Syspro_AP_Supplier_Addresss</relationshipName>
    <type>Lookup</type>
</CustomField>