force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__FaxRemitContact__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FaxRemitContact__c</fullName>
    <description>FaxRemitContact</description>
    <label>FaxRemitContact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>