force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__LanguageCodeRem__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LanguageCodeRem__c</fullName>
    <description>LanguageCodeRem</description>
    <label>LanguageCodeRem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>