force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__RemitAddr1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RemitAddr1__c</fullName>
    <description>RemitAddr1</description>
    <label>RemitAddr1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>