force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__RemitAddr2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RemitAddr2__c</fullName>
    <description>RemitAddr2</description>
    <label>RemitAddr2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>