force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__RemitAddr3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RemitAddr3__c</fullName>
    <description>RemitAddr3</description>
    <label>RemitAddr3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>