force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__RemitAddr3Loc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RemitAddr3Loc__c</fullName>
    <description>RemitAddr3Loc</description>
    <label>RemitAddr3Loc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>