force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__RemitGpsLat__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RemitGpsLat__c</fullName>
    <description>RemitGpsLat</description>
    <label>RemitGpsLat</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>