force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__RemitGpsLong__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RemitGpsLong__c</fullName>
    <description>RemitGpsLong</description>
    <label>RemitGpsLong</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>