force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__RemitName__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RemitName__c</fullName>
    <description>RemitName</description>
    <label>RemitName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>