force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__RemitPostalCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RemitPostalCode__c</fullName>
    <description>RemitPostalCode</description>
    <label>RemitPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>