force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__SupAddGpsLat__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupAddGpsLat__c</fullName>
    <description>SupAddGpsLat</description>
    <label>SupAddGpsLat</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>