force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__SupAddGpsLong__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupAddGpsLong__c</fullName>
    <description>SupAddGpsLong</description>
    <label>SupAddGpsLong</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>