force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__SupAddr1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupAddr1__c</fullName>
    <description>SupAddr1</description>
    <label>SupAddr1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>