force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__SupAddr2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupAddr2__c</fullName>
    <description>SupAddr2</description>
    <label>SupAddr2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>