force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__SupAddr3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupAddr3__c</fullName>
    <description>SupAddr3</description>
    <label>SupAddr3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>