force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__SupAddr3Loc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupAddr3Loc__c</fullName>
    <description>SupAddr3Loc</description>
    <label>SupAddr3Loc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>