force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__SupPostalCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SupPostalCode__c</fullName>
    <description>SupPostalCode</description>
    <label>SupPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>