force-app/main/default/objects/CommercientSF__ApSupplierAddr__c/fields/CommercientSF__Syspro_AP_Supplier__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_AP_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro AP Supplier</label>
    <referenceTo>CommercientSF__ApSupplier__c</referenceTo>
    <relationshipLabel>Syspro AP Supplier Addresss</relationshipLabel>
    <relationshipName>Syspro_AP_Supplier_Addresss</relationshipName>
    <type>Lookup</type>
</CustomField>